# Cytomine-sam

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/actions/setup/: action.yml
.github/workflows/: check-quality.yml  create-release.yml  docker.yml  test.yml
src/: __init__.py  app.py  config.py  download_weights.py
src/api/: health.py  prediction.py  storage.py
src/api/models/: model.py  validate.py
src/store/: store.py
src/utils/: align_prompts.py  annotations.py  box_config.py  config.py  convert_coordinates.py  convert_geojson.py  extract_img.py  format_prompt.py  postprocess.py  store_utils.py  window.py
tests/: test_align_prompts.py  test_format_prompt.py  test_validate.py
tests/api/: test_validate.py
tests/docker_container_tests/: download_test_img.py  mock_request.py  mock_request_auto.py  mock_request_autonomous.py  mock_request_smart.py  mock_request_very_large.py
tests/utils/: test_align_prompts.py  test_convert_coordinates.py  test_convert_geojson.py  test_format_prompt.py  test_postprocess.py
weights/: weights.pt  weights.pt.dvc
